Docs: added proper jsdocs comments and created openapi docs for server
