# src/server.js
@@ -1,7 +1,8 @@
 const express = require("express");
-const routeManager = require("../api/v1/products/routeManager");
+const mysql = require("mysql");
 const swaggerUi = require("swagger-ui-express");
 const swaggerJsdoc = require("swagger-jsdoc");
+const productRouter = require("../api/v1/products/productRouter");
 const { options } = require("../api/v1/docs/swagger-ui-options");
 
 /**
@@ -18,10 +19,19 @@ const PORT = process.env.PORT || 4000;
 app.use(express.json());
 
 /**
+ * MySQL setup
+ */
+// module.exports.connection = mysql.createConnection({
+//   host: "localhost",
+//   user: "root",
+//   password: "",
+//   database: "silksatinbyjune-db",
+// });
+/**
  * Fire Routers
  */
 
-app.use("/product", routeManager);
+app.use("/product", productRouter);
 
 /**
  *  Setup swagger Ui with optional properties if needed and swagger-jsdocs for easier conversion for jsdoc comments from api files to a json
